@@ -1029,6 +1029,9 @@ Bug fixes
 * LUCENE-4077: Expose the max score and per-group scores from
   ToParentBlockJoinCollector (Christoph Kaser, Mike McCandless)
 
+* LUCENE-4114: Fix int overflow bugs in BYTES_FIXED_STRAIGHT and
+  BYTES_FIXED_DEREF doc values implementations (Walt Elder via Mike McCandless).
+
 Documentation
 
 * LUCENE-3958: Javadocs corrections for IndexWriter.
